[project]
name = "pte-ecg"
description = "A package for standardized ECG feature extraction."
readme = "README.md"
authors = [{ name = "Richard M. Köhler", email = "richard.koehler@outlook.de" }]
maintainers = [
    { name = "Richard M. Köhler", email = "richard.koehler@outlook.de" },
]
requires-python = ">=3.11"
dependencies = [
    "mne>=1.9.0",
    "neurokit2>=0.2.11",
    "nolds>=0.6.2",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pywavelets>=1.8.0", # This is actually a neurokit2 dependency
    "scipy>=1.15.3",
    "ts2vg>=1.2.4",
]
dynamic = ["version"]
keywords = ["ecg", "features", "timeseries", "electrocardiogram"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[dependency-groups]
dev = ["mypy", "pre-commit", "tox"]
lint = ["ruff"]
test = ["pytest>=6.0", "pytest-cov>=4.2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pte_ecg/__init__.py"

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --cov=pte_ecg --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning", "ignore::FutureWarning"]
